--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     alias(libs.plugins.android.application)
     alias(libs.plugins.jetbrains.kotlin.android)
+    id 'kotlin-kapt'
+    id 'org.jetbrains.kotlin.plugin.serialization'
 }
 
 android {
@@ -57,6 +59,7 @@ dependencies {
     implementation libs.androidx.ui.tooling.preview
     implementation libs.androidx.material3
     implementation libs.androidx.navigation.compose
+    implementation libs.androidx.runtime.livedata
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
@@ -64,4 +67,12 @@ dependencies {
     androidTestImplementation libs.androidx.ui.test.junit4
     debugImplementation libs.androidx.ui.tooling
     debugImplementation libs.androidx.ui.test.manifest
+    implementation 'io.ktor:ktor-client-android:2.1.3'
+    implementation "io.ktor:ktor-client-content-negotiation:2.1.3"
+    implementation "io.ktor:ktor-serialization-kotlinx-json:2.1.3"
+    implementation 'androidx.room:room-runtime:2.4.3'
+    kapt 'androidx.room:room-compiler:2.4.3'
+    implementation ("com.github.bumptech.glide:compose:1.0.0-beta01")
+    implementation ("androidx.compose.ui:ui:1.7.0")
+
 }
